ダッシュボードメニューのホバー時と、選択時にCSSを変更するようにした
ホバー時に背景が少し明るくなり、選択時には更に明るくなる
また、サブメニューが選択された場合は、元のメニューも選択されたように表示される

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -107,3 +107,13 @@
 .dropdown:hover .dropdown-menu {
   display: block;
 }
+
+.dashboard .menuitem{
+  cursor: pointer;
+}
+.dashboard .menuitem:hover {
+  filter: brightness(110%);
+}
+.dashboard .menuitem.selected {
+  filter: brightness(130%);
+}
